--- a/dotfiles/browser_extension/web-sanitizer/disinfectant.css
+++ b/dotfiles/browser_extension/web-sanitizer/disinfectant.css
@@ -1,2 +1,13 @@
 /* Web Sanitizer - Minimal CSS */
 /* Everything is now handled in JavaScript for precise control */
+
+/* Text selection color matching AmiWB workbench (RGB 153, 204, 255) */
+*::selection {
+    background-color: rgb(153, 204, 255) !important;
+    color: #000000 !important;
+}
+
+*::-moz-selection {
+    background-color: rgb(153, 204, 255) !important;
+    color: #000000 !important;
+}
